<resources>
    <string name="app_name">Attendance System</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register here</string>
    <string name="register">Register</string>
    <string name="already_have_account_login_here">Already have account? Login here</string>
    <string name="nim">NIM</string>
    <string name="faculty">Fakultas</string>
    <string name="major">Jurusan</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="semester">Semester</string>
    <string name="send">Send</string>
    <string name="full_name">Full Name</string>
    <string name="please_fill_your_data">Please Fill Your Data</string>
    <string name="image_camera">Image Camera</string>
    <string name="logout">Logout</string>
    <string name="camera_hint">Please Make Sure Your Face is Visibly Lit</string>
    <string name="tap_the_icon_to_open_camera">Tap the icon to open camera</string>
    <string name="static_class_name">Class Name</string>
    <string name="static_class_lecturer">Class Lecturer</string>
    <string name="static_class_date_and_time">Class Date and Time</string>
    <string name="static_class_overview">Class Overview</string>
    <string name="static_class_list">Available Classes</string>
    <string name="dummy_text">Lorem ipsum.</string>
    <string name="record_attendance">Record Attendance</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="description_splash_1">Splash Screen Image</string>
    <string name="description_splash_2">Bangkit Logo</string>
    <string name="description_class_image">Class Image</string>
</resources>
