<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/staticClassName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/static_class_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailClassName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticClassName"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/staticClassLecturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/static_class_lecturer"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailClassName" />

        <TextView
            android:id="@+id/tvDetailClassLecturer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticClassLecturer"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/tvDetailClassLecturer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailClassLecturer1"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/staticClassDateAndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/static_class_date_and_time"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailClassLecturer2" />

        <TextView
            android:id="@+id/tvDetailClassSchedule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticClassDateAndTime"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/staticClassOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/static_class_overview"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailClassSchedule" />

        <TextView
            android:id="@+id/tvDetailClassOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticClassOverview"
            tools:text="@string/dummy_text" />

        <TextView
            android:id="@+id/staticClassList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/static_class_list"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailClassOverview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLastClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staticClassList"
            tools:itemCount="1"
            tools:listitem="@layout/class_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOnGoingClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvLastClass"
            tools:itemCount="1"
            tools:listitem="@layout/class_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNextClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvOnGoingClass"
            tools:itemCount="1"
            tools:listitem="@layout/class_layout" />

        <Button
            android:id="@+id/btnAbsentClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/record_attendance"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvNextClass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
